--- a/src/components/Login/styles.module.css
+++ b/src/components/Login/styles.module.css
@@ -1,7 +1,8 @@
 .login_container {
-  width: 100%;
+  width: 100vw;
   min-height: 100vh;
-  background-color: #f5f5f5;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+    url(assets/background.jpg);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,12 +18,12 @@
 }
 
 .left {
-  flex: 2;
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.3);
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
 }
@@ -35,7 +36,21 @@
 
 .form_container h1 {
   font-size: 40px;
+  font-weight: bold;
+  color: #e4e4e4;
   margin-top: 0;
+  position: relative;
+  padding-bottom: 20px;
+}
+
+.form_container h1::before {
+  content: "";
+  height: 1px;
+  width: 27vw;
+  background: #fff;
+  position: absolute;
+  left: -7vw;
+  bottom: -10px;
 }
 
 .input {
@@ -66,20 +81,34 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #3bb19b;
+  background-color: rgba(255, 255, 255, 0.15);
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
 }
 
-.right h1 {
+.right h1,
+h2 {
   margin-top: 0;
   color: white;
-  font-size: 40px;
+  font-size: 30px;
   align-self: center;
 }
 
-.white_btn,
-.green_btn {
+.right p {
+  margin-top: 0;
+  color: white;
+  font-size: 15px;
+  padding: 0 15px;
+  text-align: center;
+}
+
+.right h2 {
+  font-size: 20px;
+  padding-top: 40px;
+}
+
+.register_btn,
+.login_btn {
   border: none;
   outline: none;
   padding: 12px 0;
@@ -89,10 +118,20 @@
   font-weight: bold;
   font-size: 14px;
   cursor: pointer;
+  transition: 1s ease-in-out;
 }
 
-.green_btn {
-  background-color: #3bb19b;
+.login_btn {
+  background-color: #0c608a;
   color: white;
   margin: 10px;
+  margin-top: 20px;
+}
+
+.login_btn:hover {
+  background-color: #3f8fb7;
+}
+
+.register_btn:hover {
+  background-color: #c6c6c6;
 }
