--- a/src/components/Signup/styles.module.css
+++ b/src/components/Signup/styles.module.css
@@ -1,7 +1,8 @@
 .signup_container {
   width: 100%;
   min-height: 100vh;
-  background-color: #f5f5f5;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+    url(assets/background.jpg);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -22,7 +23,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #3bb19b;
+  background-color: rgba(0, 0, 0, 0.4);
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
 }
@@ -40,7 +41,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.25);
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
 }
@@ -54,6 +55,19 @@
 .form_container h1 {
   font-size: 40px;
   margin-top: 0;
+  color: #fff;
+  position: relative;
+  padding-bottom: 20px;
+}
+
+.form_container h1::before {
+  content: "";
+  height: 1px;
+  width: 35vw;
+  background: #fff;
+  position: absolute;
+  left: -11vw;
+  bottom: -10px;
 }
 
 .input {
@@ -78,8 +92,8 @@
   text-align: center;
 }
 
-.white_btn,
-.green_btn {
+.login_btn,
+.register_btn {
   border: none;
   outline: none;
   padding: 12px 0;
@@ -89,10 +103,20 @@
   font-weight: bold;
   font-size: 14px;
   cursor: pointer;
+  transition: 1s ease-in-out;
 }
 
-.green_btn {
-  background-color: #3bb19b;
+.register_btn {
+  background-color: #0c608a;
   color: white;
   margin: 10px;
+  margin-top: 20px;
+}
+
+.login_btn:hover {
+  background-color: #c6c6c6;
+}
+
+.register_btn:hover {
+  background-color: #3f8fb7;
 }
