--- a/src/components/Main/styles.module.css
+++ b/src/components/Main/styles.module.css
@@ -56,14 +56,6 @@
   border-bottom-right-radius: 10px;
 }
 
-.money {
-  grid-area: money;
-}
-
-.addExp {
-  grid-area: addExp;
-}
-
 .money_and_add_expenses {
   padding-top: 20px;
 }
@@ -104,7 +96,6 @@
   font-weight: bold;
 }
 
-.add_money,
 .add_expense,
 .add_expense_input {
   display: flex;
@@ -130,7 +121,7 @@
   padding: 11px;
   border-radius: 10px;
   background-color: #edf5f3;
-  margin: 5px 5px 10px;
+  margin: 5px 0;
   font-size: 10px;
 }
 
@@ -145,7 +136,6 @@
   font-weight: bold;
   font-size: 10px;
   cursor: pointer;
-  margin-left: 20px;
   transition: 1s ease-in-out;
 }
 
@@ -164,7 +154,6 @@
   font-weight: bold;
   font-size: 10px;
   cursor: pointer;
-  margin-left: 20px;
   transition: 1s ease-in-out;
 }
 
@@ -175,11 +164,6 @@
 .add_expense_input input {
   margin: 5px;
   margin-bottom: 10px;
-}
-
-.display_expenses {
-  display: grid;
-  /*grid-template-columns: repeat(2, 1fr);*/
 }
 
 .display_expenses_main_container {
@@ -244,12 +228,6 @@ td {
 
 .stats {
   grid-area: stats;
-}
-
-.expenses_main_container {
-  display: grid;
-  grid-template-areas: "user_expenses stats";
-  gap: 40px;
 }
 
 .select_stat {
