--- a/src/components/Main/styles.module.css
+++ b/src/components/Main/styles.module.css
@@ -28,6 +28,7 @@
   color: white;
   font-size: 15px;
   font-weight: bold;
+  margin: 0;
 }
 
 .logout_btn {
@@ -235,17 +236,6 @@ td {
   font-size: 15px;
 }
 
-.input_date {
-  outline: none;
-  border: none;
-  width: 12vw;
-  padding: 11px;
-  border-radius: 10px;
-  background-color: #edf5f3;
-  margin: 5px 5px;
-  font-size: 10px;
-}
-
 .display_stats_container {
   color: #fff;
   font-size: 12px;
@@ -295,4 +285,81 @@ td {
   background-color: #edf5f3;
   margin: 5px 5px 10px;
   font-size: 10px;
+}
+
+@media only screen and (max-width: 580px) {
+  .input {
+    width: 50vw;
+    font-size: 10px;
+  }
+
+  .input_select {
+    width: 50vw;
+    font-size: 10px;
+  }
+  .navbar h1 {
+    font-size: 15px;
+    margin-left: 20px;
+  }
+
+  .navbar p {
+    font-size: 8px;
+    font-weight: bold;
+    margin: 0;
+  }
+
+  .logout_btn {
+    width: 80px;
+    font-size: 8px;
+    margin-right: 15px;
+  }
+
+  .expense_info {
+    margin-top: 20px;
+  }
+}
+
+@media only screen and (min-width: 581px) and (max-width: 768px) {
+  .input {
+    width: 50vw;
+    font-size: 10px;
+  }
+
+  .input_select {
+    width: 50vw;
+    font-size: 10px;
+  }
+
+  .navbar h1 {
+    font-size: 20px;
+    margin-left: 20px;
+  }
+
+  .navbar p {
+    font-size: 10px;
+    font-weight: bold;
+    margin: 0;
+  }
+
+  .logout_btn {
+    width: 100px;
+    font-size: 10px;
+    margin-right: 20px;
+  }
+
+  .expense_info {
+    margin-top: 20px;
+  }
+}
+
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  .input {
+    width: 25vw;
+    font-size: 10px;
+  }
+
+  .input_select {
+    width: 25vw;
+    font-size: 10px;
+  }
 }
