--- a/src/components/Signup/styles.module.css
+++ b/src/components/Signup/styles.module.css
@@ -18,7 +18,6 @@
 }
 
 .left {
-  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,8 +34,15 @@
   align-self: center;
 }
 
+.left p {
+  margin-top: 0;
+  color: white;
+  font-size: 15px;
+  padding: 0 15px;
+  text-align: center;
+}
+
 .right {
-  flex: 2;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -58,16 +64,6 @@
   color: #fff;
   position: relative;
   padding-bottom: 20px;
-}
-
-.form_container h1::before {
-  content: "";
-  height: 1px;
-  width: 35vw;
-  background: #fff;
-  position: absolute;
-  left: -11vw;
-  bottom: -10px;
 }
 
 .input {
@@ -119,4 +115,105 @@
 
 .register_btn:hover {
   background-color: #3f8fb7;
+}
+
+@media only screen and (max-width: 580px) {
+  .left {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 0;
+    padding-bottom: 15px;
+  }
+
+  .form_container h1 {
+    font-size: 30px;
+    padding-top: 10px;
+  }
+
+  .input {
+    width: 270px;
+  }
+
+  .right {
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+
+  .left h1 {
+    font-size: 25px;
+    margin-top: 15px;
+  }
+
+  .signup_form_container {
+    width: auto;
+    height: auto;
+    -webkit-box-shadow: -3px -1px 80px 17px rgba(132, 132, 134, 1);
+    -moz-box-shadow: -3px -1px 80px 17px rgba(132, 132, 134, 1);
+    box-shadow: -3px -1px 80px 17px rgb(0 0 0 / 14%);
+  }
+}
+
+@media only screen and (min-width: 581px) and (max-width: 768px) {
+  .left {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 0;
+    padding-bottom: 13px;
+  }
+
+  .form_container h1 {
+    font-size: 40px;
+    padding-top: 10px;
+  }
+  .left h1 {
+    margin-top: 10px;
+  }
+
+  .right {
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+  .input {
+    padding: 12px;
+  }
+
+  .signup_form_container {
+    -webkit-box-shadow: -3px -1px 80px 17px rgba(132, 132, 134, 1);
+    -moz-box-shadow: -3px -1px 80px 17px rgba(132, 132, 134, 1);
+    box-shadow: -3px -1px 80px 17px rgb(0 0 0 / 14%);
+  }
+}
+
+@media only screen and (min-width: 769px) and (max-width: 991px) {
+  .left {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 0;
+    padding-bottom: 15px;
+  }
+
+  .left h1 {
+    padding-top: 15px;
+  }
+
+  .form_container h1 {
+    font-size: 40px;
+  }
+  .right {
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+
+  .input {
+    padding: 13px;
+  }
+
+  .signup_form_container {
+    -webkit-box-shadow: -3px -1px 80px 17px rgba(132, 132, 134, 1);
+    -moz-box-shadow: -3px -1px 80px 17px rgba(132, 132, 134, 1);
+    box-shadow: -3px -1px 80px 17px rgb(0 0 0 / 14%);
+  }
 }
